Import of RJBS/Number-Tolerant-1.52 from CPAN.
gitpan-cpan-distribution: Number-Tolerant
gitpan-cpan-version:      1.52
gitpan-cpan-path:         RJBS/Number-Tolerant-1.52.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Number::Tolerant
 
+1.52    2006-05-11
+        no functional changes
+        documentation tweaks, individual module versions updated
+
 1.50    2006-01-27
         large refactoring of types
         BasicTypes divided, plugin mechanism rewritten
