Import of RJBS/Number-Tolerant-1.601 from CPAN.
gitpan-cpan-distribution: Number-Tolerant
gitpan-cpan-version:      1.601
gitpan-cpan-path:         RJBS/Number-Tolerant-1.601.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-README for Number::Tolerant
+README for Number::Tolerant 1.601
 
 Number::Tolerant creates a number-like object whose value refers to a range of
 possible values, each equally acceptable. It overloads comparison operations to
