--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Number::Tolerant
 
+1.601   2008-10-06
+        remove tests that non-author testers should not run
+
 1.600   2008-07-30
         Still tolerant after all these years!
         100% test coverage restored
