Import of RJBS/Number-Tolerant-1.701 from CPAN.
gitpan-cpan-distribution: Number-Tolerant
gitpan-cpan-version:      1.701
gitpan-cpan-path:         RJBS/Number-Tolerant-1.701.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Number::Tolerant
 
+1.701   2010-11-29
+
+        include Test::Tolerant
+
 1.700   2010-08-10
         major changes to support rational numbers via BigRat; n +/- a/b
 
